# traitement-de-donnees

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/prompts/: check-schema.prompt.md  review-code.prompt.md
.github/skills/python-anti-patterns/: SKILL.md
.github/skills/write-code/: SKILL.md
.github/skills/write-docs/: SKILL.md
.github/workflows/: build-img.yaml
_types/: dags.py  projet.py
common_tasks/: etl.py  projet.py  sql.py
dags/applications/clean_logs_and_tasks/: dags.py  readme.md  task.py
dags/applications/clean_s3/: actions.py  dags.py  task.py
dags/applications/clean_system/: dags.py  process.py  readme.md  task.py
dags/applications/configuration_projets/: config.py  configuration_projets.py  dags.py  process.py  readme.md  tasks.py
dags/applications/db_backup/: actions.py  dags.py  readme.md  tasks.py
dags/applications/gestion_utilisateurs/: README.md  dags.py  process.py  tasks.py
dags/applications/tdb_backup/: actions.py  dags.py  readme.md  tasks.py
dags/cbcm/donnee_comptable/: actions.py  chorus_dags.py  config.py  dags.py  process.py  readme.md  tasks.py
dags/cbcm/ref_service_prescripteur/: actions.py  config.py  dags.py  process.py  readme.md  tasks.py
dags/cgefi/barometre/: barometre_dags.py  dags.py  process.py  tasks.py
dags/cgefi/suivi_activite/: dags.py  process.py  tasks.py
dags/commun/code_geographique/: README.md  actions.py  cog_dags.py  dags.py  process.py  tasks.py
dags/dag_standard/: config.py  dag_standard.py  dag_verification.py
dags/dge/carto_rem/: carto_rem_dags.py  process.py  tasks.py
dags/transverse/liste_packages/: README.md  packages_dags.py
dags/transverse/show_context/: print_context_dags.py
docs/: configuration_projet.md  contribuer.md  convention.md  dags.md  grist.md  infra.md  pipeline.md
entities/: dags.py  projet.py
enums/: dags.py  database.py  filesystem.py  mail.py
infra/catalog/: iceberg.py  polaris.py
infra/database/: base.py  factory.py  postgres.py  sqlite.py  trino.py
infra/database/tests/: test_base.py  test_postgres.py  test_sqlite.py
infra/file_handling/: base.py  dataframe.py  factory.py  local.py  s3.py
infra/file_handling/tests/: test_base.py  test_local.py  test_s3.py
infra/file_system/: factory.py
infra/file_system/tests/: test_base.py  test_local.py
infra/grist/: client.py
infra/http_client/: adapters.py  base.py  config.py  factory.py
infra/mails/: default_smtp.py
infra/mails/templates/: dag_info.html
modules/: constants.py
modules/common_tasks/: etl.py  file.py  grist.py  projet.py  s3.py  sql.py  validation.py
modules/enums/: http.py
modules/infra/catalog/: iceberg.py
modules/infra/database/: exceptions.py  factory.py  sqlite.py
modules/infra/file_system/: data_serializer.py  dataframe.py  factory.py
modules/infra/grist/: client.py
modules/infra/http_client/: adapters.py  base.py  factory.py
modules/infra/mails/: default_smtp.py
modules/types/: dags.py  projet.py  readers.py  tasks.py  writers.py
modules/utils/config/: dag_params.py  tasks.py
modules/utils/process/: dates.py
scripts/: example.env  init_env.bash  settings.py
scripts/catalogs/: example.env  iceberg.py  init_polaris.bash  polaris.py  readme.md  run_iceberg.bash
scripts/extensions/: extensions.json  install-extensions.py
scripts/files/: customCA.crt
scripts/generate_tables/: parse_partquet_to_db.py
scripts/handle_partitions/: commun.py  config.py  create_partitions.bash  create_partitions.py  main.py  partitions.bash  partitions.py  readme.md
scripts/load_config/: config-example.json  load_config.bash  load_config_projets.py
scripts/load_dataset/: example.env  load_dataset.bash  main.py  readme.md
scripts/setup/: .pre-commit-config.yaml  requirements.txt  setup.sh
src/: constants.py
src/_enums/: filesystem.py
src/_types/: dags.py  projet.py  readers.py  tasks.py  writers.py
src/common_tasks/: etl.py  file.py  grist.py  projet.py  s3.py  sql.py  validation.py
src/enums/: dags.py
src/utils/: dataframe.py  exceptions.py  logs.py
src/utils/tasks/: etl.py  (+4 more)
types/: dags.py  projet.py
utils/: dataframe.py
utils/config/: dag_params.py  tasks.py  types.py  vars.py
utils/control/: dates.py  number.py  structures.py  text.py
utils/process/: dates.py
utils/tasks/: etl.py  file.py  grist.py  projet.py  s3.py  sql.py  validation.py
(+375 files in other folders)
